--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-      location.replace("\willkommen\Html");
+      location.replace("https://privateprojects.net/willkommen/Html");
     </script>
   </head>
 </html>
