--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Welcome_Page</title>
   <link rel="stylesheet" href="../willkommen/Style/main/mainStyle.css">
   <link rel="stylesheet" href="../willkommen/Style/main/Button/button.css">
-  <link rel="stylesheet" href="../willkommen/Style/main/text.css">
+  <link rel="stylesheet" href="willkommen/Style/main/text.css">
 </head>
 
 
