--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome_Page</title>
-  <link rel="stylesheet" href="../willkommen/Style/main/mainStyle.css">
-  <link rel="stylesheet" href="../willkommen/Style/main/Button/button.css">
+  <title>Welcome Page</title>
+  <link rel="stylesheet" href="willkommen/Style/main/mainStyle.css">
+  <link rel="stylesheet" href="willkommen/Style/main/Button/button.css">
   <link rel="stylesheet" href="willkommen/Style/main/text.css">
+
+  <meta name="title" content="Private Project">
+  <meta name="description" content="Private Project is Private website that I can share my projects with other people.">
+  <meta name="apple-mobile-web-app-title" content="Private Project">
+  <meta name="application-name" content="Private Project">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#212121">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://privateprojects.net/">
+  <meta property="og:title" content="Welcome Page">
+  <meta property="og:description"
+    content="Private Project is Private website that I can share my projects with other people.">
+  <meta property="og:image" content="./icon.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://privateprojects.net/">
+  <meta property="twitter:title" content="Private Project">
+  <meta property="twitter:description"
+    content="Private Project is Private website that I can share my projects with other people.">
+  <meta property="twitter:image" content="./icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
+  <link rel="icon" href="./icon.png" type="image/svg+xml">
 </head>
 
 
@@ -16,13 +37,13 @@
   <div class="navbar">
     <div class="container">
       <a id="logo" class="logo" href="#">Private<span>Project</span></a>
-      <img id="Menu" class="Menu" src="../willkommen/SVG/menu-icon.svg" width="20" height="15" alt="menu">
+      <img id="Menu" class="Menu" src="willkommen/SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
       <nav>
-        <img id="Menu-Exit" class="Menu-Exit" src="../SVG/X.svg" alt="Menu-Exit">
+        <img id="Menu-Exit" class="Menu-Exit" src="willkommen/SVG/X.svg" alt="Menu-Exit">
         <ul class="left-menu">
           <li class="Home"><a href="index.html">Home</a></a></li>
-          <li><a href="../willkommen/Html/Project.html">Porjects</a></a></li>
+          <li><a href="willkommen/Projects/index.html">Porjects</a></a></li>
           <li><a href="../willkommen/Game/color/Play.html">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
@@ -60,7 +81,7 @@
       </h1>
       </tex">
       <!-- a buttons -->
-      <form action="../willkommen/Html/Project.html">
+      <form action="willkommen/Projects/Project.html">
         <div class="buttons">
           <button class="blob-btn">
             Porjects
