--- a/willkommen/Game/color/index.html
+++ b/willkommen/Game/color/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Unity WebGL Player | coolor</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
-  <link rel="stylesheet" href="/Style/main/mainStyle.css">
+  <link rel="stylesheet" href="../">
 </head>
 
 <body>
