--- a/willkommen/Game/color/index.html
+++ b/willkommen/Game/color/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Unity WebGL Player | coolor</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
-  <link rel="stylesheet" href="../">
+  <link rel="stylesheet" href="../../Style/main/mainStyle.css">
 </head>
 
 <body>
@@ -18,9 +18,9 @@
       <nav>
         <img id="Menu-Exit" class="Menu-Exit" src="../SVG/X.svg" alt="Menu-Exit">
         <ul class="left-menu">
-          <li class="Home"><a href="index.html">Home</a></a></li>
-          <li><a href="../Html/Porject.html">Porjects</a></a></li>
-          <li><a href="../Game/color/Play.html">Coming soon</a></a></li>
+          <li class="Home"><a href="/index.html">Home</a></a></li>
+          <li><a href="../../Projects/index.html">Porjects</a></a></li>
+          <li><a href="../color/index.html">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
           <li><a href="#">Contact</a></a></li>
