--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img id="Menu-Exit" class="Menu-Exit" src="willkommen/SVG/X.svg" alt="Menu-Exit">
         <ul class="left-menu">
           <li class="Home"><a href="index.html">Home</a></a></li>
-          <li><a href="willkommen/Projects/index.html">Porjects</a></a></li>
+          <li><a href="willkommen/Projects/index.html">Projects</a></a></li>
           <li><a href="../willkommen/Game/color/index.html">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
