--- a/willkommen/Projects/index.html
+++ b/willkommen/Projects/index.html
@@ -20,7 +20,7 @@
                 <img id="Menu-Exit" class="Menu-Exit" src="../SVG/X.svg" alt="Menu-Exit">
                 <ul class="left-menu">
                     <li class="Home"><a href="../../index.html">Home</a></a></li>
-                    <li><a href="index.html">Porjects</a></a></li>
+                    <li><a href="index.html">Projects</a></a></li>
                     <li><a href="../Game/color/index.html">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
@@ -35,7 +35,7 @@
 <section calss="Hero">
     <div class="Welcome">
         <h1>
-            Porjects
+            Projects
         </h1>
     </div>
 
