--- a/willkommen/Game/color/index.html
+++ b/willkommen/Game/color/index.html
@@ -19,7 +19,7 @@
         <img id="Menu-Exit" class="Menu-Exit" src="../SVG/X.svg" alt="Menu-Exit">
         <ul class="left-menu">
           <li class="Home"><a href="/index.html">Home</a></a></li>
-          <li><a href="../../Projects/index.html">Porjects</a></a></li>
+          <li><a href="../../Projects/index.html">Projects</a></a></li>
           <li><a href="../color/index.html">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
