--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <form action="willkommen/Projects/index.html">
         <div class="buttons">
           <button class="blob-btn">
-            Porjects
+            Projects
             <span class="blob-btn__inner">
               <span class="blob-btn__blobs">
                 <span class="blob-btn__blob"></span>
