--- a/Projects/index.html
+++ b/Projects/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome_Page</title>
-    <link rel="stylesheet" href="../Style/main/mainStyle.css">
+    <link rel="stylesheet" href="/willkommen/Style/main/mainStyle.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                 <ul class="left-menu">
                     <li class="Home"><a href="../../index.html">Home</a></a></li>
                     <li><a href="index.html">Projects</a></a></li>
-                    <li><a href="../Game/color/index.html">Coming soon</a></a></li>
+                    <li><a href="/willkommen/Game/color/index.html">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
                     <li><a href="#">Contact</a></a></li>
