--- a/index.html
+++ b/index.html
@@ -2,127 +2,129 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome Page</title>
-  <link rel="stylesheet" href="willkommen/Style/main/mainStyle.css">
-  <link rel="stylesheet" href="willkommen/Style/main/Button/button.css">
-  <link rel="stylesheet" href="willkommen/Style/main/text.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome Page</title>
+    <link rel="stylesheet" href="willkommen/Style/main/mainStyle.css">
+    <link rel="stylesheet" href="willkommen/Style/main/Button/button.css">
+    <link rel="stylesheet" href="willkommen/Style/main/text.css">
 
-  <meta name="title" content="Private Project">
-  <meta name="description" content="Private Project is Private website that I can share my projects with other people.">
-  <meta name="apple-mobile-web-app-title" content="Private Project">
-  <meta name="application-name" content="Private Project">
-  <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="theme-color" content="#212121">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://privateprojects.net/">
-  <meta property="og:title" content="Welcome Page">
-  <meta property="og:description"
-    content="Private Project is Private website that I can share my projects with other people.">
-  <meta property="og:image" content="./icon.png">
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://privateprojects.net/">
-  <meta property="twitter:title" content="Private Project">
-  <meta property="twitter:description"
-    content="Private Project is Private website that I can share my projects with other people.">
-  <meta property="twitter:image" content="./icon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
-  <link rel="icon" href="./icon.png" type="image/svg+xml">
+    <meta name="title" content="Private Project">
+    <meta name="description"
+        content="Private Project is Private website that I can share my projects with other people.">
+    <meta name="apple-mobile-web-app-title" content="Private Project">
+    <meta name="application-name" content="Private Project">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#212121">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://privateprojects.net/">
+    <meta property="og:title" content="Welcome Page">
+    <meta property="og:description"
+        content="Private Project is Private website that I can share my projects with other people.">
+    <meta property="og:image" content="./icon.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://privateprojects.net/">
+    <meta property="twitter:title" content="Private Project">
+    <meta property="twitter:description"
+        content="Private Project is Private website that I can share my projects with other people.">
+    <meta property="twitter:image" content="./icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
+    <link rel="icon" href="./icon.png" type="image/svg+xml">
 </head>
 
 
 <body>
-  <div class="navbar">
-    <div class="container">
-      <a id="logo" class="logo" href="#">Private<span>Project</span></a>
-      <img id="Menu" class="Menu" src="willkommen/SVG/menu-icon.svg" width="20" height="15" alt="menu">
+    <div class="navbar">
+        <div class="container">
+            <a id="logo" class="logo" href="#">Private<span>Project</span></a>
+            <img id="Menu" class="Menu" src="willkommen/SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
-      <nav>
-        <img id="Menu-Exit" class="Menu-Exit" src="willkommen/SVG/X.svg" alt="Menu-Exit">
-        <ul class="left-menu">
-          <li class="Home"><a href="/">Home</a></a></li>
-          <li><a href="/Projects/index">Projects</a></a></li>
-          <li><a href="/willkommen/Game/color/index.html">Coming soon</a></a></li>
-        </ul>
-        <ul class="right-menu">
-          <li><a href="#">Contact</a></a></li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-
-  <section calss="Hero">
-    <div class="Welcome">
-      <h1>
-        Welcome
-      </h1>
+            <nav>
+                <img id="Menu-Exit" class="Menu-Exit" src="willkommen/SVG/X.svg" alt="Menu-Exit">
+                <ul class="left-menu">
+                    <li class="Home"><a href="/">Home</a></a></li>
+                    <li><a href="Projects">Projects</a></a></li>
+                    <li><a href="/willkommen/Game/color/index.html">Coming soon</a></a></li>
+                </ul>
+                <ul class="right-menu">
+                    <li><a href="#">Contact</a></a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
-    <div class="WelcomePng">
-      <img src="../willkommen/img/1.PNG" alt="">
-    </div>
-
-    <div class="text">
-      <h1>I'm Hussein<br></br>
-        <div class="c1">
-          <div class="type">Web Developer</div>
+    <section calss="Hero">
+        <div class="Welcome">
+            <h1>
+                Welcome
+            </h1>
         </div>
-        </br>
-        <div class="c2">
-          <div class="type2">Web Designer</div>
+
+        <div class="WelcomePng">
+            <img src="../willkommen/img/1.PNG" alt="">
         </div>
-        </br>
-        <div class="c3">
-          <div class="type3">-----------------</div>
-        </div>
-        <br></br>
-      </h1>
-      </tex">
-      <!-- a buttons -->
-      <form action="willkommen/Projects/index.html">
-        <div class="buttons">
-          <button class="blob-btn">
-            Projects
-            <span class="blob-btn__inner">
-              <span class="blob-btn__blobs">
-                <span class="blob-btn__blob"></span>
-                <span class="blob-btn__blob"></span>
-                <span class="blob-btn__blob"></span>
-                <span class="blob-btn__blob"></span>
-              </span>
-            </span>
-          </button>
-          <br />
 
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-            <defs>
-              <filter id="goo">
-                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
-                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7" result="goo">
-                </feColorMatrix>
-                <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
-              </filter>
-            </defs>
-          </svg>
-      </form>
-      <!-- a buttons -->
-  </section>
-  <script>
-    const mobileBtn = document.getElementById('Menu')
-    nav = document.querySelector('nav')
-    mobileBtnExit = document.getElementById('Menu-Exit')
+        <div class="text">
+            <h1>I'm Hussein<br></br>
+                <div class="c1">
+                    <div class="type">Web Developer</div>
+                </div>
+                </br>
+                <div class="c2">
+                    <div class="type2">Web Designer</div>
+                </div>
+                </br>
+                <div class="c3">
+                    <div class="type3">-----------------</div>
+                </div>
+                <br></br>
+            </h1>
+            </tex">
+            <!-- a buttons -->
+            <form action="willkommen/Projects/index.html">
+                <div class="buttons">
+                    <button class="blob-btn">
+                        Projects
+                        <span class="blob-btn__inner">
+                            <span class="blob-btn__blobs">
+                                <span class="blob-btn__blob"></span>
+                                <span class="blob-btn__blob"></span>
+                                <span class="blob-btn__blob"></span>
+                                <span class="blob-btn__blob"></span>
+                            </span>
+                        </span>
+                    </button>
+                    <br />
 
-    mobileBtn.addEventListener('click', () => {
-      nav.classList.add('menu_HIDDEN');
-    })
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                        <defs>
+                            <filter id="goo">
+                                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
+                                <feColorMatrix in="blur" mode="matrix"
+                                    values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7" result="goo">
+                                </feColorMatrix>
+                                <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
+                            </filter>
+                        </defs>
+                    </svg>
+            </form>
+            <!-- a buttons -->
+    </section>
+    <script>
+        const mobileBtn = document.getElementById('Menu')
+        nav = document.querySelector('nav')
+        mobileBtnExit = document.getElementById('Menu-Exit')
 
-    mobileBtnExit.addEventListener('click', () => {
-      nav.classList.remove('menu_HIDDEN');
-    })
+        mobileBtn.addEventListener('click', () => {
+            nav.classList.add('menu_HIDDEN');
+        })
 
-  </script>
+        mobileBtnExit.addEventListener('click', () => {
+            nav.classList.remove('menu_HIDDEN');
+        })
+
+    </script>
 </body>
 
 </html>
