--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="willkommen/Style/main/mainStyle.css">
-    <link rel="stylesheet" href="willkommen/Style/main/Button/button.css">
-    <link rel="stylesheet" href="willkommen/Style/main/text.css">
+    <link rel="stylesheet" href="/Style/main/mainStyle.css">
+    <link rel="stylesheet" href="/Style/main/Button/button.css">
+    <link rel="stylesheet" href="/Style/main/text.css">
 
     <meta name="title" content="Private Project">
     <meta name="description"
@@ -38,14 +38,14 @@
     <div class="navbar">
         <div class="container">
             <a id="logo" class="logo" href="#">Private<span>Project</span></a>
-            <img id="Menu" class="Menu" src="willkommen/SVG/menu-icon.svg" width="20" height="15" alt="menu">
+            <img id="Menu" class="Menu" src="/SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
             <nav>
-                <img id="Menu-Exit" class="Menu-Exit" src="willkommen/SVG/X.svg" alt="Menu-Exit">
+                <img id="Menu-Exit" class="Menu-Exit" src="/SVG/X.svg" alt="Menu-Exit">
                 <ul class="left-menu">
                     <li class="Home"><a href="/">Home</a></a></li>
                     <li><a href="Projects">Projects</a></a></li>
-                    <li><a href="/willkommen/Game/color/index.html">Coming soon</a></a></li>
+                    <li><a href="/Game/color/Color">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
                     <li><a href="#">Contact</a></a></li>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="WelcomePng">
-            <img src="../willkommen/img/1.PNG" alt="">
+            <img src="img/1.PNG" alt="">
         </div>
 
         <div class="text">
@@ -82,7 +82,7 @@
             </h1>
             </tex">
             <!-- a buttons -->
-            <form action="willkommen/Projects/index.html">
+            <form action="Projects">
                 <div class="buttons">
                     <button class="blob-btn">
                         Projects
