--- a/Projects.html
+++ b/Projects.html
@@ -19,9 +19,9 @@
             <nav>
                 <img id="Menu-Exit" class="Menu-Exit" src="../SVG/X.svg" alt="Menu-Exit">
                 <ul class="left-menu">
-                    <li class="Home"><a href="/Index">Home</a></a></li>
+                    <li class="Home"><a href="/">Home</a></a></li>
                     <li><a href="Projects">Projects</a></a></li>
-                    <li><a href="/Game/color/Color">Coming soon</a></a></li>
+                    <li><a href="/Game/color/Play.html">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
                     <li><a href="#">Contact</a></a></li>
