--- a/Game/color/Play.html
+++ b/Game/color/Play.html
@@ -15,14 +15,14 @@
   <div class="navbar">
     <div class="container">
       <a id="logo" class="logo" href="#">Private<span>Project</span></a>
-      <img id="Menu" class="Menu" src="willkommen/SVG/menu-icon.svg" width="20" height="15" alt="menu">
+      <img id="Menu" class="Menu" src="/SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
       <nav>
-        <img id="Menu-Exit" class="Menu-Exit" src="willkommen/SVG/X.svg" alt="Menu-Exit">
+        <img id="Menu-Exit" class="Menu-Exit" src="/SVG/X.svg" alt="Menu-Exit">
         <ul class="left-menu">
-          <li class="Home"><a href="/index.html">Home</a></a></li>
-          <li><a href="/Projects/index.html">Projects</a></a></li>
-          <li><a href="/willkommen/Game/color/index.html">Coming soon</a></a></li>
+          <li class="Home"><a href="/">Home</a></a></li>
+          <li><a href="../../Projects">Projects</a></a></li>
+          <li><a href="Play">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
           <li><a href="#">Contact</a></a></li>
@@ -140,6 +140,19 @@
       });
     };
     document.body.appendChild(script);
+
+    const mobileBtn = document.getElementById('Menu')
+    nav = document.querySelector('nav')
+    mobileBtnExit = document.getElementById('Menu-Exit')
+
+    mobileBtn.addEventListener('click', () => {
+      nav.classList.add('menu_HIDDEN');
+    })
+
+    mobileBtnExit.addEventListener('click', () => {
+      nav.classList.remove('menu_HIDDEN');
+    })
+
   </script>
 </body>
 
