--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <ul class="left-menu">
                     <li class="Home"><a href="/">Home</a></a></li>
                     <li><a href="Projects">Projects</a></a></li>
-                    <li><a href="/Game/color/Color">Coming soon</a></a></li>
+                    <li><a href="/Game/color/Play">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
                     <li><a href="#">Contact</a></a></li>
