--- a/Projects.html
+++ b/Projects.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome_Page</title>
     <link rel="stylesheet" href="/Style/main/mainStyle.css">
+    <link rel="stylesheet" href="/Projects/Project/Project.css" />
 </head>
 
 <body>
@@ -38,6 +39,18 @@
             Projects
         </h1>
     </div>
+    <div class="Box">
+        <div id="demo" Style="background:url(/img/color.png); ">
+            <div class="Play">
+                <form action="/Game/color/Play">
+                    <button class="ButtonPlay"> Play!</button>
+                </form>
+            </div>
+        </div>
+        <div id="demo"></div>
+
+    </div>
+
 
 </section>
 
