--- a/Projects.html
+++ b/Projects.html
@@ -40,14 +40,19 @@
         </h1>
     </div>
     <div class="Box">
-        <div id="demo" Style="background:url(/img/color.png); ">
+        <div id="demo" Style="background:url(/img/colors.png); ">
             <div class="Play">
                 <form action="/Game/color/Play">
                     <button class="ButtonPlay"> Play!</button>
                 </form>
             </div>
         </div>
-        <div id="demo"></div>
+        <div id="demo">
+            <div class="Play">
+                <button class="ButtonPlay" Style=" margin-left: 70px;">Goming soon!</button> </button>
+            </div>
+
+        </div>
 
     </div>
 
