--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="left-menu">
                     <li class="Home"><a href="/">Home</a></a></li>
                     <li><a href="Projects">Projects</a></a></li>
-                    <li><a href="/Game/color/Play">Coming soon</a></a></li>
+                    <li><a href="">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
                     <li><a href="#">Contact</a></a></li>
