--- a/Game/color/Play.html
+++ b/Game/color/Play.html
@@ -22,7 +22,7 @@
         <ul class="left-menu">
           <li class="Home"><a href="/">Home</a></a></li>
           <li><a href="../../Projects">Projects</a></a></li>
-          <li><a href="Play">Coming soon</a></a></li>
+          <li><a href="">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
           <li><a href="#">Contact</a></a></li>
