--- a/Projects.html
+++ b/Projects.html
@@ -49,7 +49,7 @@
         </div>
         <div id="demo">
             <div class="Play">
-                <button class="ButtonPlay" Style=" margin-left: 70px;">Goming soon!</button> </button>
+                <button class="ButtonPlay" Style=" margin-left: 70px;">Coming soon!</button> </button>
             </div>
 
         </div>
