--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <link rel="stylesheet" href="/Style/main/mainStyle.css">
     <link rel="stylesheet" href="/Style/main/Button/button.css">
     <link rel="stylesheet" href="/Style/main/text.css">
-
 </head>
 
 
@@ -63,55 +62,51 @@
         </div>
 
         <div class="WelcomePng">
-            <img src="img/1.PNG" alt="">
+            <img src="img/19362653-ai.png" alt="" width="700">
+
         </div>
 
-        <div class="text">
-            <h1>I'm Hussein<br></br>
-                <div class="c1">
-                    <div class="type">Web Developer</div>
-                </div>
-                </br>
-                <div class="c2">
-                    <div class="type2">Web Designer</div>
-                </div>
-                </br>
-                <div class="c3">
-                    <div class="type3">-----------------</div>
-                </div>
-                <br></br>
-            </h1>
-            </tex">
-            <!-- a buttons -->
-            <form action="Projects">
-                <div class="buttons">
-                    <button class="blob-btn">
-                        Projects
-                        <span class="blob-btn__inner">
-                            <span class="blob-btn__blobs">
-                                <span class="blob-btn__blob"></span>
-                                <span class="blob-btn__blob"></span>
-                                <span class="blob-btn__blob"></span>
-                                <span class="blob-btn__blob"></span>
-                            </span>
-                        </span>
-                    </button>
-                    <br />
+        <div style="display: flex;justify-content: center;">
+            <div class="text">
+                <h1 class="textH">I'm Hussein
+                    Private Project is Private website that I can share my projects with other people
+                </h1>
+            </div>
 
-                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-                        <defs>
-                            <filter id="goo">
-                                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
-                                <feColorMatrix in="blur" mode="matrix"
-                                    values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7" result="goo">
-                                </feColorMatrix>
-                                <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
-                            </filter>
-                        </defs>
-                    </svg>
-            </form>
-            <!-- a buttons -->
+        </div>
+
+        <!-- a buttons -->
+        <form action="Projects">
+            <div class="buttons">
+                <button class="blob-btn">
+                    Projects
+                    <span class="blob-btn__inner">
+                        <span class="blob-btn__blobs">
+                            <span class="blob-btn__blob"></span>
+                            <span class="blob-btn__blob"></span>
+                            <span class="blob-btn__blob"></span>
+                            <span class="blob-btn__blob"></span>
+                        </span>
+                    </span>
+                </button>
+                <br />
+
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                    <defs>
+                        <filter id="goo">
+                            <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
+                            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7"
+                                result="goo">
+                            </feColorMatrix>
+                            <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
+                        </filter>
+                    </defs>
+                </svg>
+        </form>
+        <!-- a buttons -->
     </section>
+
+
     <script>
         const mobileBtn = document.getElementById('Menu')
         nav = document.querySelector('nav')
