--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="WelcomePng">
-            <img src="img/19362653-ai.png" alt="" width="700">
+            <img class="Pn" src="img/19362653-ai.png" alt="" width="550">
 
         </div>
 
