--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 
         <div style="display: flex;justify-content: center;">
             <div class="text">
-                <h1 class="textH">I'm Hussein
-                    Private Project is Private website that I can share my projects with other people
+                <h1 class="textH">
+                    Private Project is Private website that I can share my projects with other people<br>
+                    If you click on the Project button, you will see all my projects
                 </h1>
             </div>
 
