--- a/Projects.html
+++ b/Projects.html
@@ -38,7 +38,7 @@
         </h1>
     </div>
     <div class="Box">
-        <div id="demo" Style="background:url(/img/colors.png); ">
+        <div id="demo" class="demo" Style="background:url(/img/colors.png); ">
             <div class="Play">
                 <form action="/Game/color/Play">
                     <button class="ButtonPlay"> Play!</button>
@@ -69,6 +69,12 @@
         nav.classList.remove('menu_HIDDEN');
     })
 
+    const opys = document.getElementsByClassName('Play')
+    opy = document.ELEMENT_NODE('Play')
+
+    opys.addEventListener('click', () => {
+        opy.ELEMENT_NODE('Play')
+    })
 
 </script>
 </body>
