--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <div style="display: flex;justify-content: center;">
             <div class="text">
                 <h1 class="textH">
-                    Private Project is Private website that I can share my projects with other people<br>
-                    If you click on the Project button, you will see all my projects
+                    Private Project is a private website where I share my projects with other people.<br>
+                    if you click on the Project button, you will see all my projects
                 </h1>
             </div>
 
@@ -120,6 +120,8 @@
         mobileBtnExit.addEventListener('click', () => {
             nav.classList.remove('menu_HIDDEN');
         })
+
+
 
     </script>
 </body>
