--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="text">
                 <h1 class="textH">
                     Private Project is a private website where I share my projects with other people.<br>
-                    if you click on the Project button, you will see all my projects
+                    If you click on the PROJECTS button, you will see all my projects
                 </h1>
             </div>
 
