--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
-                    <li><a href="#">Contact</a></a></li>
+                    <li><a href="#content1">Contact</a></a></li>
                 </ul>
             </nav>
         </div>
@@ -105,6 +105,33 @@
                 </svg>
         </form>
         <!-- a buttons -->
+    </section>
+
+    <section id="content1" style="background-color:rgb(255, 255, 255); padding-top:1%;  box-shadow: 5px 5px 15px 5px #00000063;    border: 5px solid #1C6EA4;
+      border-radius: 15px;">
+        <div class="contentd">
+            <a style="margin-left: 10px;" id="logo" class="logo" href="#">Private<span>Project</span></a>
+            <div>
+                <a href="https://discord.com/users/773939978937565234">
+                    <img class="discord" alt="" src="/img/discord.PNG">
+                    <a class="adis">Kash7#2043</a>
+                </a>
+            </div>
+            <div>
+
+                <a href="https://t.me/husseinalhilfi">
+                    <img class="telegram" src="/img/telegram.PNG" alt="">
+                    <a class="adis">@husseinalhilfi
+                    </a>
+                </a>
+            </div>
+        </div>
+
+        <div style="display: flex; justify-content: center;">
+            <a style="text-align:center">
+                © 2022
+            </a>
+        </div>
     </section>
 
 
