--- a/Projects.html
+++ b/Projects.html
@@ -45,9 +45,11 @@
                 </form>
             </div>
         </div>
-        <div id="demo">
+        <div id="demo" Style="background:url(/img/concentration.png); width:300px;">
             <div class="Play">
-                <button class="ButtonPlay" Style=" margin-left: 70px;">Coming soon!</button> </button>
+                <form action="/img/concentration.png">
+                    <button class="ButtonPlay" Style=" margin-left: 70px;">Coming soon!</button> </button>
+                </form>
             </div>
 
         </div>
