--- a/Game/color/Play.html
+++ b/Game/color/Play.html
@@ -12,6 +12,7 @@
 
 <body>
 
+
   <div class="navbar">
     <div class="container">
       <a id="logo" class="logo" href="#">Private<span>Project</span></a>
@@ -80,11 +81,11 @@
     }
 
     var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/test bild.loader.js";
+    var loaderUrl = buildUrl + "/New folder.loader.js";
     var config = {
-      dataUrl: buildUrl + "/test bild.data",
-      frameworkUrl: buildUrl + "/test bild.framework.js",
-      codeUrl: buildUrl + "/test bild.wasm",
+      dataUrl: buildUrl + "/New folder.data",
+      frameworkUrl: buildUrl + "/New folder.framework.js",
+      codeUrl: buildUrl + "/New folder.wasm",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
       productName: "coolor",
@@ -111,7 +112,6 @@
       // To lower canvas resolution on mobile devices to gain some
       // performance, uncomment the following line:
       // config.devicePixelRatio = 1;
-
 
       canvas.style.width = window.innerWidth + 'px';
       canvas.style.height = window.innerHeight + 'px';
@@ -141,19 +141,6 @@
       });
     };
     document.body.appendChild(script);
-
-    const mobileBtn = document.getElementById('Menu')
-    nav = document.querySelector('nav')
-    mobileBtnExit = document.getElementById('Menu-Exit')
-
-    mobileBtn.addEventListener('click', () => {
-      nav.classList.add('menu_HIDDEN');
-    })
-
-    mobileBtnExit.addEventListener('click', () => {
-      nav.classList.remove('menu_HIDDEN');
-    })
-
   </script>
 </body>
 
