--- a/Game/color/Play/index.html
+++ b/Game/color/Play/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Unity WebGL Player | coolor</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.ico">
-  <link rel="stylesheet" href="TemplateData/style.css">
-  <link rel="stylesheet" href="../../Style/main/mainStyle.css">
+  <link rel="shortcut icon" href="../TemplateData/favicon.ico">
+  <link rel="stylesheet" href="../TemplateData/style.css">
+  <link rel="stylesheet" href="../../../Style/main/mainStyle.css">
 </head>
 
 <body>
@@ -16,13 +16,13 @@
   <div class="navbar">
     <div class="container">
       <a id="logo" class="logo" href="#">Private<span>Project</span></a>
-      <img id="Menu" class="Menu" src="/SVG/menu-icon.svg" width="20" height="15" alt="menu">
+      <img id="Menu" class="Menu" src="../SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
       <nav>
-        <img id="Menu-Exit" class="Menu-Exit" src="/SVG/X.svg" alt="Menu-Exit">
+        <img id="Menu-Exit" class="Menu-Exit" src="../SVG/X.svg" alt="Menu-Exit">
         <ul class="left-menu">
           <li class="Home"><a href="/">Home</a></a></li>
-          <li><a href="../../Projects">Projects</a></a></li>
+          <li><a href="../../../Projects">Projects</a></a></li>
           <li><a href="">Coming soon</a></a></li>
         </ul>
         <ul class="right-menu">
