--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img id="Menu-Exit" class="Menu-Exit" src="/SVG/X.svg" alt="Menu-Exit">
                 <ul class="left-menu">
                     <li class="Home"><a href="/">Home</a></a></li>
-                    <li><a href="Projects">Projects</a></a></li>
+                    <li><a href="/Projects/">Projects</a></a></li>
                     <li><a href="Hund">Coming soon</a></a></li>
                 </ul>
                 <ul class="right-menu">
