--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <!-- a buttons -->
-        <form action="Projects">
+        <form action="/Projects/">
             <div class="buttons">
                 <button class="blob-btn">
                     Projects
