--- a/Projects/index.html
+++ b/Projects/index.html
@@ -40,16 +40,26 @@
     <div class="Box">
         <div id="demo" class="demo" Style="background:url(/img/colors.png); ">
             <div class="Play">
-                <form action="/Game/color/Play">
+                <form action="/Game/color/">
                     <button class="ButtonPlay"> Play!</button>
                 </form>
+
+            </div>
+
+            <div class="mTest">
+                <a style="color:white"> This game doesn't support mobile phone, you can play it on
+                    “pc”.</a>
             </div>
         </div>
-        <div id="demo" Style="background:url(/img/concentration.png); width:300px;">
+        <div id="demo" calss="ha" Style="background:url(/img/concentration.png);">
             <div class="Play">
                 <form action="/img/concentration.png">
                     <button class="ButtonPlay" Style=" margin-left: 70px;">Coming soon!</button> </button>
                 </form>
+            </div>
+            <div class="mTest">
+                <a style="color:white"> This game doesn't support mobile phone, you can play it on
+                    “pc”.</a>
             </div>
 
         </div>
@@ -71,12 +81,6 @@
         nav.classList.remove('menu_HIDDEN');
     })
 
-    const opys = document.getElementsByClassName('Play')
-    opy = document.ELEMENT_NODE('Play')
-
-    opys.addEventListener('click', () => {
-        opy.ELEMENT_NODE('Play')
-    })
 
 </script>
 </body>
