--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
         <div class="WelcomePng">
             <img class="Pn" src="img/19362653-ai.png" alt="" width="400">
-
         </div>
 
         <div style="display: flex;justify-content: center;">
@@ -73,7 +72,6 @@
                     If you click on the PROJECTS button, you will see all my projects
                 </h1>
             </div>
-
         </div>
 
         <!-- a buttons -->
@@ -105,25 +103,36 @@
                 </svg>
         </form>
         <!-- a buttons -->
-    </section>
 
+    </section>
     <section id="content1" style="background-color:rgb(255, 255, 255); padding-top:1%;  box-shadow: 5px 5px 15px 5px #00000063;    border: 5px solid #1C6EA4;
       border-radius: 15px;">
-        <div class="contentd">
-            <a style="margin-left: 10px;" id="logo" class="logo" href="#">Private<span>Project</span></a>
+
+        <div style="display: flex;justify-content: end;">
+            <img class="im" src="/SVG/Contact.svg" style="width: 100px;position: absolute;margin-top: 10px;">
+        </div>
+        <div class="contentdd">
+            <div class="te" style="display: flex;">
+                <a style=" font-size: 20px; " id="logoo" class="logoo" href="#">Private<span>Project</span></a>
+            </div>
             <div>
+                <div>
+                    <a style="position: absolute;margin-left: 45px;margin-top: 7px;" class="adis">Kash7#2043</a>
+                    </a>
+                </div>
                 <a href="https://discord.com/users/773939978937565234">
-                    <img class="discord" alt="" src="/img/discord.PNG">
-                    <a class="adis">Kash7#2043</a>
-                </a>
+                    <img class="discord" alt="" width="30px" src="/img/discord.PNG">
             </div>
             <div>
 
-                <a href="https://t.me/husseinalhilfi">
-                    <img class="telegram" src="/img/telegram.PNG" alt="">
-                    <a class="adis">@husseinalhilfi
+                <div>
+                    <a style="position: absolute;margin-left: 45px;margin-top: 15px;" class="adis">@husseinalhilfi
                     </a>
+                </div>
+                <a href="https://t.me/husseinalhilfi">
+                    <img class="telegram" src="/img/telegram.PNG" width="30px" alt="">
                 </a>
+
             </div>
         </div>
 
@@ -132,9 +141,8 @@
                 © 2022
             </a>
         </div>
+
     </section>
-
-
     <script>
         const mobileBtn = document.getElementById('Menu')
         nav = document.querySelector('nav')
@@ -147,9 +155,6 @@
         mobileBtnExit.addEventListener('click', () => {
             nav.classList.remove('menu_HIDDEN');
         })
-
-
-
     </script>
 </body>
 
