--- a/Projects/index.html
+++ b/Projects/index.html
@@ -43,10 +43,12 @@
                 <form action="/Game/color/">
                     <button class="ButtonPlay"> Play!</button>
                 </form>
-
+                <form action="/Assets.rar">
+                    <button style="margin-left:50px; margin-top: 10px;" class="ButtonPlay">Download Assets</button>
+                </form>
             </div>
 
-            <div class="mTest">
+            <div class=" mTest">
                 <a style="color:white"> This game doesn't support mobile phone, you can play it on
                     “pc”.</a>
             </div>
