--- a/Projects/index.html
+++ b/Projects/index.html
@@ -48,8 +48,8 @@
                 </form>
             </div>
 
-            <div class=" mTest">
-                <a style="color:white"> This game doesn't support mobile phone, you can play it on
+            <div class="mTest">
+                <a style="color:white; margin-top:-30px; "> This game doesn't support mobile phone, you can play it on
                     “pc”.</a>
             </div>
         </div>
