--- a/Projects/index.html
+++ b/Projects/index.html
@@ -14,7 +14,7 @@
 
     <div class="navbar">
         <div class="container">
-            <a id="logo" class="logo" href="#">Private<span>Project</span></a>
+            <a id="logo" class="logo" href="/">Private<span>Project</span></a>
             <img id="Menu" class="Menu" src="../SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
             <nav>
@@ -24,9 +24,7 @@
                     <li><a href="">Projects</a></a></li>
                     <li><a href="">Coming soon</a></a></li>
                 </ul>
-                <ul class="right-menu">
-                    <li><a href="#">Contact</a></a></li>
-                </ul>
+
             </nav>
         </div>
     </div>
