--- a/Game/color/index.html
+++ b/Game/color/index.html
@@ -13,7 +13,7 @@
 <section>
   <div class="navbar">
     <div class="container">
-      <a id="logo" class="logo" href="#">Private<span>Project</span></a>
+      <a id="logo" class="logo" href="/">Private<span>Project</span></a>
       <img id="Menu" class="Menu" src="/SVG/menu-icon.svg" width="20" height="15" alt="menu">
 
       <nav>
@@ -22,9 +22,6 @@
           <li class="Home"><a href="/">Home</a></a></li>
           <li><a href="/Projects/">Projects</a></a></li>
           <li><a href="Hund">Coming soon</a></a></li>
-        </ul>
-        <ul class="right-menu">
-          <li><a href="#content1">Contact</a></a></li>
         </ul>
       </nav>
     </div>
