--- a/Projects/index.html
+++ b/Projects/index.html
@@ -5,7 +5,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome_Page</title>
+    <meta name="title" content="Private Project">
+    <meta name="description"
+        content="Private Project is Private website that I can share my projects with other people.">
+    <meta name="apple-mobile-web-app-title" content="Private Project">
+    <meta name="application-name" content="Private Project">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#212121">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://privateprojects.net/">
+    <meta property="og:title" content="Welcome Page">
+    <meta property="og:description"
+        content="Private Project is Private website that I can share my projects with other people.">
+    <meta property="og:image" content="./icon.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://privateprojects.net/">
+    <meta property="twitter:title" content="Private Project">
+    <meta property="twitter:description"
+        content="Private Project is Private website that I can share my projects with other people.">
+    <meta property="twitter:image" content="./icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
+    <link rel="icon" href="./icon.png" type="image/svg+xml">
+
     <link rel="stylesheet" href="/Style/main/mainStyle.css">
     <link rel="stylesheet" href="/Projects/Project/Project.css" />
 </head>
