--- a/Game/color/index.html
+++ b/Game/color/index.html
@@ -2,10 +2,30 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Unity WebGL Player | coolor</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Private Project">
+  <meta name="description" content="Private Project is Private website that I can share my projects with other people.">
+  <meta name="apple-mobile-web-app-title" content="Private Project">
+  <meta name="application-name" content="Private Project">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#212121">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://privateprojects.net/">
+  <meta property="og:title" content="Welcome Page">
+  <meta property="og:description"
+    content="Private Project is Private website that I can share my projects with other people.">
+  <meta property="og:image" content="./icon.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://privateprojects.net/">
+  <meta property="twitter:title" content="Private Project">
+  <meta property="twitter:description"
+    content="Private Project is Private website that I can share my projects with other people.">
+  <meta property="twitter:image" content="./icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
+  <link rel="icon" href="./icon.png" type="image/svg+xml">
+
   <link rel="stylesheet" href="TemplateData/style.css">
   <link rel="stylesheet" href="../../Style/main/mainStyle.css">
 </head>
@@ -30,7 +50,11 @@
 
 <body>
 
-  <div style="display: flex;justify-content: center; margin-top: 100px;">
+  <h4 style="display:flex; justify-content: center; color:white; text-shadow: 2px 2px 20px #000000;">
+    fTip: follow the doors
+  </h4>
+
+  <div style="display: flex;justify-content: center; margin-top: 60px;">
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
