--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       border-radius: 15px;">
 
         <div style="display: flex;justify-content: end;">
-            <img class="im" src="/SVG/Contact.svg" style="width: 100px;position: absolute;margin-top: 10px;">
+            <img class="im" src="/SVG/Contact.svg"
+                style="width: 100px;position: absolute;margin-top: 10px;margin-right: 25px;RIGHT: 0;">
         </div>
         <div class="contentdd">
             <div class="te" style="display: flex;">
